[package]
name = "esp32c3-polyfill"
version = "0.1.0"
edition = "2024"

[dependencies]
# critical-section = "1.2.0"
# esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
# esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
# rtt-target = "0.6.1"

esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c3"] }

critical-section = "1.2.0"
rtt-target       = "0.6.1"
